<resources>
    <string name="splash_subtext">Customised my trip</string>
    <string name="welcome_text">Welcome, </string>
    <string name="exit_text">Are you sure you want to quit?</string>
    <string name="exit_quit_text">Quit</string>
    <string name="exit_cancel_text">Cancel</string>
    <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">AIzaSyCFaWAvd4HXG13DHhEX6KRPanWfpVit9yM</string>
    <string name="facebook_key" translatable="false" templateMergeStrategy="preserve">165093227569630</string>
    <string name="naver_key" translatable="false" templateMergeStrategy="preserve">jiBZC2isRuydbd_tswoS</string>
    <string name="naver_secret_key" translatable="false" templateMergeStrategy="preserve">q_Rj4pkg9x</string>
    <string name="kakao_native_key" translatable="false" templateMergeStrategy="preserve">9ef00032d197f13b6f1dd48d9cc4072b</string>
    <string name="serverip">http://13.125.83.183:</string>
    <string name="SERVER_CONTENT_TOTAL">/mylittleseoul/changFoodSelect?</string>
    <string name="right_arrow">◀</string>
    <string name="left_arrow">▶</string>
    <string name="failtoloadlocation">Fail to get your location. Just it will service based on standard location.</string>
    <string name="internet_failed">Internet was disconnected. Update will be failed</string>
    <string name="google_login_failed">Google Login failed. Try again or Check your internet connection.</string>
    <string name="naver_login_failed">Naver Login failed. Try again or Check your internet connection.</string>
    <string name="login_failed">Login error, Please login again</string>
    <string name="home_tab">home</string>
    <string name="map_tab">map</string>
    <string name="intro_tab">intro</string>
    <string name="guide_tab">guide</string>
    <string name="toon_tab">toon</string>
    <string name="around_tab">around</string>
    <string name="info_tab">my page</string>
    <string name="food_tab">food</string>
    <string name="attraction_tab">attraction</string>
    <string name="dialogyestitle">Exit</string>
    <string name="around_tab_transportaion">Transportation</string>
    <string name="around_tab_food">Food\&amp;Cafe</string>
    <string name="around_tab_attraction">Other attractions</string>
    <string name="from_changdeokgung">From Changdeokgung </string>
    <string name="menu_show_btn">Show ▼</string>
    <string name="menu_close_btn">Close ▲</string>
    <string name="transportation_menu_title">Public Transportation From here</string>
    <string name="food_menu_title">Food\&amp;Cafe Around here</string>
    <string name="attraction_menu_title">Attraction Around here</string>
    <string name="detail_wish">Wish to visit</string>
    <string name="detail_like">I liked</string>
    <string name="detail_visit">I visited</string>
    <string name="detail_guidebtn">Guide</string>
    <string name="detail_title">Title</string>
    <string name="detail_address">Address</string>
    <string name="detail_transportation">Transportation</string>
    <string name="detail_biz_operation">Business info</string>
    <string name="detail_operating_day">Operating Day</string>
    <string name="detail_day_off">Day Off</string>
    <string name="detail_operating_hour">Operating Hour</string>
    <string name="detail_fee">Fee</string>
    <string name="detail_youtubelink_title">Youtube link</string>
    <string name="detail_con_desc">         Item description.     </string>
    <string name="detail_rating_best">This was Goood!</string>
    <string name="detail_rating_mid">Not bad</string>
    <string name="detail_rating_low">Not recommend</string>
    <string name="wrong_access">Wrong access</string>
    <string name="image_select_toast">Thank you for your review</string>
    <string name="transportation_clicked">This item has not detailed page.</string>
    <string name="youtube_img_former">https://img.youtube.com/vi/</string>
    <string name="youtube_img_later">/mqdefault.jpg</string>
    <string name="youtube_connect">https://m.youtube.com/watch?v=</string>
    <string name="admission_title">Admission</string>
    <string name="admission_con">Feb.&#8211;May 09:00&#8211;18:00 \n
                                June&#8211;August 09:00&#8211;18:30 \n
                                September&#8211;October 09:00&#8211;18:00 \n
                                November&#8211;January 09:00&#8211;17:30</string>
    <string name="ticket_hour_title">Ticket hour</string>
    <string name="ticket_hour_con">Feb.&#8211;May 09:00&#8211;17:00 \n
                                June&#8211;August 09:00&#8211;17:30 \n
                                September&#8211;October 09:00&#8211;17:00 \n
                                November&#8211;January 09:00&#8211;16:30</string>
    <string name="ticket_title">Admission fee</string>
    <string name="ticket_con">Adult(mindAge 19~64) \3,000 \n
                            Youth(mindAge 7~18) \1,500 \n
                            Children(under 7 years old), Seniors(over 65 years old) Free \n
                            Those wearing a Hanbok(traditional Korean clothes)/Culture day(the last Wednesdays of every month) Free</string>
    <string name="transportation_info_title">To Changdeokgung</string>
    <string name="transportation_info_con">Subway Jongno 3-ga station (Line 1,3 and 5 exit 6), Anguk station (Line 3, Exit 3) \n
                                            Bus Blue 109, 151, 162, 171, 172, 272, Green 7025</string>
    <string name="tab_near_building">Please tab again around near this building</string>
    <string name="securedWifi">Please try again if it is connected to internet</string>
    <string name="app_name">Story Tour</string>
    <string name="menuclick">Menu click!</string>
    <string name="more">Click here for more stories</string>
    <string name="name">Name</string>
    <string name="desc">Desc</string>
    <string name="firstScreen">Home</string>
    <string name="menufaq">How to use</string>
    <string name="homepage">Homepage</string>
    <string name="menugps">GPS guide</string>
    <string name="menucha">Character guide</string>
    <string name="menumap">Map guide</string>
    <string name="gpstoast">Please give GPS permission for Real, Changdeokgung</string>
    <string name="homepageready">Homepage is in prepare</string>
    <string name="pressaudiobtn">Play the Audio</string>
    <string name="pressplaybtn">Press the play button</string>
    <string name="tothemap">Move to map</string>
    <string name="onmapreadytoast">When you connect internet, you can get images with audio guide.</string>
    <string name="distancefirst">It is \t</string>
    <string name="distancesecond">km from Changdeokgung. You can use guide service in Changdeokgung.</string>
    <string name="next">_Please slide image to left side</string>
    <string name="pop">You can get current location if you turn on GPS and internet.</string>
    <string name="checkWeather">How is the weather at Changdeokgung?\nClick here!</string>
    <string name="questWeather">Weather at \n Changdeokgung</string>
    <string name="quest">-???-</string>
    <string name="sunny">Sunny\n Sunny</string>
    <string name="littlecloud">With\n Sunny</string>
    <string name="manycloud">Clou- \n cloudy</string>
    <string name="cloudy">Black....\ncloud..</string>
    <string name="rainy">Welcome\n Mr.rain..</string>
    <string name="snowandrain">It is \npowerful weather</string>
    <string name="snow">WoW!\nMr.Snow come here!</string>
    <string name="waitWifi">It is not connected internet, now</string>
    <string name="requireInternet">Please connect Internet</string>
    <string name="faqIntroduce"> \n \n \t Hi, this is Real, Changdeokgung. \n \n  \t This application made to enjoy Changdeokgung with mobile for every visitor. You can use all of service in this application at Changdeokgung. You do not need to follow anybody with kind guide and FREE! If you are trying to visit Changdeokgung, please use Real, Changdeokgung!\n</string>
    <string name="faqgps"> \n \n \t You can use GPS guide based on GPS which check your mobile location. When you are getting in Changdeokgung, you can see first image and you will also see second image if you move around.  You can enjoy a story to click the pop-up message. Also you can check attraction and story again what you have seen at left hidden drawer menu. \n</string>
    <string name="faqcharac"> \n \n \t Character guide will guide you with korean character. When you are getting in Changdeokgung, you can see first image and you will also see second image with marker if you move around.  You can enjoy a story to click the marker. Also you can check attraction and story again what you have seen at left hidden drawer menu.\n</string>
    <string name="drawer_open">Open, hit it!</string>
    <string name="drawer_close">Close, hit it!</string>
    <string name="faqintro">What is Real Changdeokgung?</string>
    <string name="faqlistfirst">What is the GPS Guide and how I can use it?</string>
    <string name="faqlistfirstimagef">When you getting in a gung</string>
    <string name="faqlistfirstimages">Pop-up image</string>
    <string name="faqlistsecondimages">Marker image</string>
    <string name="faqlistfirstimaget">Slide-menu image</string>
    <string name="faqlistsecond">What is the Character Guide and how I can use it?</string>
    <string name="faqlistthirdimagef">First Screen</string>
    <string name="faqlistthirdimages">Message before connecting internet</string>
    <string name="faqlistthirdimaget">Checked weather image</string>
    <string name="faqweather">\n \n \t You can check weather Changdeokgung at now to click a cloud with question mark. If you get a message like center image, you need to connect internet.\n </string>
    <string name="faqlistthird">I did not know that I can check present weather at Changdeokgung?</string>
    <string name="faqlistforth">I have check guide service, but I can not see anything. What should I do?</string>
    <string name="faqnomap"> \n \n \t This application get a map from Google Service. So if your mobile did not get internet, it is hard to use a guide. However there is free Wifi at Changdeokgung. How about connect that Wifi?\n</string>
    <string name="faqlistforthimage">Screen with nothing</string>
    <string name="changintro">\n \t Before to know Changdeokgung, we need to know Choseon dynasty which continued 500 years. Choseon dynasty was established in 1392. Although Gyeongbokgung was constructed first, however Changdeokgung was used more because Gyeongbokgung was set on fire after Japanese invasion in 1592. Changdeokgung is well preserved than other Korean palace. That is why UNESCO listed this palace as World Heritage in 1997. Changdeokgung could be separated as two part PalaceBuildingArea and SecretGarden. You need about an hour to look around  for each part, especially you should follow guide at SecretGarden which means you are not allowed self-guide at SecretGarden. However you can do self-guide in PalaceBuildingArea with this application. This application show you images and related story which make your trip rich. Just turn on one of guide mode(GPS or Character gudie) and walk around. The application let you know with vibration.\n \n\n\n\n</string>
    <string name="ticketinfo">Admission Fees</string>
    <string name="operatinginfo">Ticket sales and Operating hours</string>
    <string name="secretinfo">SecretGarden tour hours</string>
    <string name="transinfo">Transfortation information</string>
    <string name="changaudioaddress">http://13.209.77.103:8080/resources/images/eng/ch_e_00_intro.wav</string>
    <string name="donaudioaddress">http://13.209.77.103:8080/resources/images/eng/ch_e_01_donhwa.wav</string>
    <string name="geumaudioaddress">http://13.209.77.103:8080/resources/images/eng/ch_e_02_geumcheon.wav</string>
</resources>